Add FParsec package

--- a/time_calc/time_calc.fsproj
+++ b/time_calc/time_calc.fsproj
@@ -6,7 +6,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Program.fs"/>
+        <Compile Include="Program.fs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FParsec" Version="1.0.4-RC3" />
     </ItemGroup>
 
 </Project>
