--- a/TimeCalc/TimeCalc.fsproj
+++ b/TimeCalc/TimeCalc.fsproj
@@ -43,6 +43,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="AssemblyInfo.fs" />
+        <Compile Include="Parser.fs" />
         <Compile Include="Program.fs" />
         <Content Include="packages.config" />
     </ItemGroup>
